Fix native access in jablib